--- a/ShoppingCart/src/main/resources/templates/Admin/index.html
+++ b/ShoppingCart/src/main/resources/templates/Admin/index.html
@@ -20,7 +20,7 @@
                 </a>
             </div>
             <div class="col-md-4 mt-4">
-                <a href="/admin/category" class="text-decoration-none">
+                <a href="/admin/categories" class="text-decoration-none">
                     <div class="card card-sh">
                         <div class="card-body text-center text-primary">
                             <i class="fa-solid fa-list fa-3x"></i>
@@ -60,7 +60,7 @@
                 </a>
             </div>
             <div class="col-md-4 mt-4">
-                <a href="#" class="text-decoration-none">
+                <a href="/admin/add-admin" class="text-decoration-none">
                     <div class="card card-sh">
                         <div class="card-body text-center text-primary">
                             <i class="fa-solid fa-user-plus fa-3x"></i>
