--- a/ShoppingCart/src/main/resources/templates/product.html
+++ b/ShoppingCart/src/main/resources/templates/product.html
@@ -77,6 +77,9 @@
                         </div>
                     </div>
                 </div>
+
+                <!--                Pagination-->
+
                 <div class="row">
                     <div class="col-md-4">Total Products: [[${totalElements}]]</div>
                     <div class="col-md-6">
