--- a/ShoppingCart/src/main/resources/templates/base.html
+++ b/ShoppingCart/src/main/resources/templates/base.html
@@ -61,37 +61,31 @@
                             <a class="nav-link active" aria-current="page" href="/user/cart"><i
                                     class="fa-solid fa-cart-shopping"></i> Cart ([[${cartCount}]])</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
-                               aria-expanded="false">
-                                <i class="fa-solid fa-user"></i> [[${user.name}]]
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/user/profile">Profile</a></li>
-                                <li><a class="dropdown-item" href="/user/orders">My Orders</a></li>
-                                <li><a class="dropdown-item" href="/logout">Logout</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                            </ul>
-                        </li>
                     </th:block>
-                    <th:block th:if="${user.role == 'ROLE_ADMIN'}">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
-                               aria-expanded="false">
-                                <i class="fa-solid fa-user"></i> [[${user.name}]]
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/admin/profile">Profile</a></li>
-                                <li><a class="dropdown-item" href="/admin/">Dashboard</a></li>
-                                <li><a class="dropdown-item" href="/logout">Logout</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                            </ul>
-                        </li>
-                    </th:block>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            <i class="fa-solid fa-user"></i> [[${user.name}]]
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li th:if="${user.role == 'ROLE_USER'}">
+                                <a class="dropdown-item" href="/user/profile">Profile</a>
+                            </li>
+                            <li th:if="${user.role == 'ROLE_ADMIN'}">
+                                <a class="dropdown-item" href="/admin/profile">Profile</a>
+                            </li>
+                            <li th:if="${user.role == 'ROLE_USER'}">
+                                <a class="dropdown-item" href="/user/orders">My Orders</a>
+                            </li>
+                            <li th:if="${user.role == 'ROLE_ADMIN'}">
+                                <a class="dropdown-item" href="/admin/">Dashboard</a>
+                            </li>
+                            <li><a class="dropdown-item" href="/logout">Logout</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                        </ul>
+                    </li>
                 </th:block>
 
             </ul>
